Please view this file on the master branch, on branches it may be out of date.

v 1.4.0 (unreleased)
  - added support for FOSUserBundle
  - added FOSUserBundle fixtures for development mode
  - added FOSUserBundle event listener for useful events
  - added example for overriding FOSUserBundle messages
  - added application translation catalogue
  - clarified the purpose of the user event listener
  - added configurable application domain for command line use
  - added support for respecting the authenticated users locale.
  - added FOSUserBundle view overrides
  - added command to list or mail registered users.
  - added command to send registration confirmation reminders.
  - added fixture for testing unconfirmed users.
  - added french translation catalogues.
  - added support for adding confirmed users to a default group.
  - added support for rendering command mails via templating service.

v 1.3.0 (unreleased)
  - fixed an issue with executing migrations / fixtures even if none existed
  - added support for fixing coding style to SF2 standards on builds
  - added missing MIT license file

v 1.2.0 (unreleased)
  - added support for CommonMark markdown parsing
  - added support for UUID based Doctrine identifiers
  - rebuild the database, run migrations, and import fixtures in development mode

v 1.1.0 (unreleased)
  - added support for Doctrine migrations
  - added support for Doctrine fixtures in development mode
  - added support for Capistrano deployment workflow
  - added support for OPcache bytecode cache clearing

v 1.0.0 (unreleased)
  - project created