@@ -1,0 +1,38 @@
+<?php
+
+namespace App\Migrations;
+
+use Doctrine\DBAL\Migrations\AbstractMigration;
+use Doctrine\DBAL\Schema\Schema;
+
+/**
+ * Extend entities with time stamps
+ *
+ * @author  Daniel S. Reichenbach <daniel@kogitoapp.com>
+ */
+class Version20150603103419 extends AbstractMigration
+{
+    /**
+     * @param Schema $schema
+     */
+    public function up(Schema $schema)
+    {
+        // this up() migration is auto-generated, please modify it to your needs
+        $this->abortIf($this->connection->getDatabasePlatform()->getName() != 'mysql', 'Migration can only be executed safely on \'mysql\'.');
+
+        $this->addSql('ALTER TABLE fos_users ADD created DATETIME NOT NULL, ADD updated DATETIME NOT NULL');
+        $this->addSql('ALTER TABLE fos_groups ADD created DATETIME NOT NULL, ADD updated DATETIME NOT NULL');
+    }
+
+    /**
+     * @param Schema $schema
+     */
+    public function down(Schema $schema)
+    {
+        // this down() migration is auto-generated, please modify it to your needs
+        $this->abortIf($this->connection->getDatabasePlatform()->getName() != 'mysql', 'Migration can only be executed safely on \'mysql\'.');
+
+        $this->addSql('ALTER TABLE fos_groups DROP created, DROP updated');
+        $this->addSql('ALTER TABLE fos_users DROP created, DROP updated');
+    }
+}
