@@ -35,6 +35,7 @@
 
         "doctrine/migrations":                      "1.0.*@dev",
         "doctrine/doctrine-migrations-bundle":      "2.1.*@dev",
+        "stof/doctrine-extensions-bundle":          "~1.1",
         "friendsofsymfony/user-bundle":             "2.0.*@dev",
 
         "ramsey/uuid":                              "~2.8",
